--- a/todo.next/src/config.template
+++ b/todo.next/src/config.template
@@ -1,5 +1,5 @@
 [todo]
-# the location (full path) of the todo file
+# the location (full path) of the todo file. Must be absolute, i.e. the full path
 todofile =
 # if True, the todo file will be sorted by todo.next, otherwise it is left like as-is
 sort = True
@@ -7,12 +7,14 @@ sort = True
 editor =
 
 [archive]
-# archive directories and files are created based on "done"-date. 
-# Available fields are corresponding to strftime()
-archive_scheme = %Y-%m report.txt
-archive_dir = 
-archive_unsorted_dir = 
-backup_folder = 
+# archive directory and files are created based on "done"-date. 
+# Available fields are corresponding to strftime() (e.g. %Y for year like '2012', etc.)
+# the directories may be absolute or relative to the location of the todo file
+archive_filename_scheme = archive\%Y\%Y-%m-%d_report.txt
+# the following directories may not contain variable parts
+archive_unsorted_filename = archive\without_date.txt
+# for storing backups
+backup_dir = backup
 
 [display]
 # if True, URLs and files will be shortened to enhance legibility
@@ -21,3 +23,5 @@ shorten_urls = True
 # if True, the respective properties will be shortened
 shorten_due = True
 shorten_done = True
+# hides the "created" property for display of most actions
+hide_created = True
