--- a/todo.next/src/config.template
+++ b/todo.next/src/config.template
@@ -18,11 +18,11 @@ backup_dir = backup
 
 [display]
 # sort
-sort = done_or_todo overdue_flag priority_flag done_time due_time created_time alphabetical project context done todo
-# parts
-shorten = 
-# properties: due created done file url
-suppress = 
+sort = done_or_todo overdue_flag priority_flag done_date due_date created_date alpha project context done todo
+# properties that will be displayed shortened
+shorten = files urls due done
+# properties that will be suppressed on display
+suppress = created
 # if True, URLs and files will be shortened to enhance legibility
 shorten_files = True
 shorten_urls = True
