--- a/todo.next/src/config.template
+++ b/todo.next/src/config.template
@@ -34,7 +34,7 @@ col_project = - MAGENTA -
 col_delegate = BLACK YELLOW BRIGHT
 col_id = BLUE BLACK BRIGHT
 col_block = RED BLACK DIM
-col_marker = BLUE BLACK DIM
+col_marker = MAGENTA - BRIGHT
 # for whole items
 col_item_prio = WHITE BLACK BRIGHT
 col_item_overdue = RED BLACK BRIGHT
