Changed standard colour for IDs, blue was not readable

--- a/todo.next/src/config.template
+++ b/todo.next/src/config.template
@@ -32,7 +32,7 @@ suppress = created id blockedby blocks started
 col_context = - RED -
 col_project = - MAGENTA -
 col_delegate = BLACK YELLOW BRIGHT
-col_id = BLUE BLACK BRIGHT
+col_id = GREEN BLACK BRIGHT
 col_block = RED BLACK DIM
 col_marker = MAGENTA - BRIGHT
 # for whole items
